--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -282,3 +282,25 @@ h6,
     hyphens: auto;
   }
 }
+
+.flex-1 {
+  flex: 1 !important;
+}
+
+.flex-2 {
+  flex: 2 !important;
+}
+
+.cursor-pointer {
+  cursor: pointer !important;
+}
+
+.overflow-hidden {
+  overflow: hidden !important;
+}
+
+.truncate {
+  white-space: nowrap !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+}
